# uk-energy-forecasting

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements-api.txt  requirements-dev.txt  requirements.txt  test_model.ipynb
.github/workflows/: ci.yml
dashboard/powerbi/: UK National Energy Demand Forecasting.pbix
data/processed/: daily_energy.parquet  daily_energy_holidays.parquet  energy_features.parquet  energy_features_v2.parquet  energy_features_v3.csv  energy_features_v3.parquet  energy_weather_holiday.parquet  weather_features.parquet
data/raw/energy/: demanddata_2019.csv  demanddata_2026.csv
models/: xgboost_energy_forecaster.pkl  xgboost_energy_forecaster_v2.pkl  xgboost_energy_forecaster_v3.pkl
notebooks/: 01_data_collection.ipynb.ipynb  02_eda.ipynb.ipynb  03_feature_engineering.ipynb  04_model_training.ipynb  05_model_explainability.ipynb  06_holiday_feature.ipynb  07_weather_pipeline.ipynb  08_feature_engineering_v2.ipynb  09_model_training_v2.ipynb  10_shap_v2.ipynb  11_model_training_v3.ipynb  12_shap_v3.ipynb
reports/: forecast_results.csv
src/: __init__.py  config.py  schema.py
src/api/: __init__.py  main.py  schemas.py
src/data/: __init__.py  load.py
src/features/: __init__.py  build_features.py
src/models/: __init__.py  predict.py
tests/: conftest.py  test_api.py  test_features.py  test_model.py  test_schema.py
